<resources>
    <string name="app_name">exp5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID:</string>
    <string name="tel">TEL:</string>
    <string name="name">NAME:</string>
    <string name="input">Stu Info is inputting…</string>
    <string name="note">My Stu note …</string>
    <string name="fromDateBase">DateBase</string>
    <string name="add">add</string>
    <string name="load">load</string>
    <string name="local">local</string>
    <string name="save">save</string>

</resources>