<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bk"
    android:orientation="vertical"

    android:padding="10dp"

    tools:context=".fragment.StuInputFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="60dp"
        android:background="@mipmap/icon_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="60dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="5dp"
        android:text="@string/input"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="160dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/id_tv"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:text="@string/id"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"

            android:padding="2dp">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:paddingStart="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:rotationX="8"
                android:text="@string/name"
                android:textColor="@color/black"

                android:textSize="20sp" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/tel_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:text="@string/tel"
                android:textColor="@color/black"

                android:textSize="20sp" />

            <EditText
                android:id="@+id/tel_edit"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </LinearLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <Button
        android:id="@+id/blue"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:background="@drawable/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pink"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </Button>

    <Button
        android:id="@+id/pink"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="@drawable/pink"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>